Fix layout problem in weather prefs.

--- a/styles/master.styl
+++ b/styles/master.styl
@@ -146,8 +146,8 @@ select
       display block
       margin-bottom 12px
 
-    label span
-      width 140px
+    label span:first-child
+      width 120px
       display inline-block
 
       + *
